--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/supabase-js": "^2.38.4",
+    "chess.js": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
@@ -34,6 +35,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.8.0",
+    "stockfish": "^16.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^4.4.5"
